--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "set DEBUG=app&nodemon&node app.js",
+    "eslint": "eslint app.js",
+    "eslint:fix": "eslint app.js --fix"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,22 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
+  },
+"nodemonConfig":{
+  "restartable":"rs",
+  "ignore":["node_modules/**/node_modules"],
+  "delay":"2500",
+  "env":{
+    "NODE_ENV":"development",
+    "PORT":4000
   }
+}
+
 }
