--- a/package.json
+++ b/package.json
@@ -24,21 +24,23 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "pug": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0"
   },
-"nodemonConfig":{
-  "restartable":"rs",
-  "ignore":["node_modules/**/node_modules"],
-  "delay":"2500",
-  "env":{
-    "NODE_ENV":"development",
-    "PORT":4000
+  "nodemonConfig": {
+    "restartable": "rs",
+    "ignore": [
+      "node_modules/**/node_modules"
+    ],
+    "delay": "2500",
+    "env": {
+      "NODE_ENV": "development",
+      "PORT": 4000
+    }
   }
-}
-
 }
