--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "debug": "^4.1.1",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "morgan": "^1.10.0",
