--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "homepage": "https://github.com/surfer91/library#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^3.3.7",
     "debug": "^4.1.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.0"
   },
   "devDependencies": {
